# swu-scanner

./: .gitignore  .readthedocs.yaml  README.md  README.rst  pyproject.toml
docs/source/: conf.py  index.rst  installation.rst
src/card_scanner_pkg/apps/gui_qt/: controller.py  main.py  qt_ui_sink.py
src/card_scanner_pkg/apps/gui_qt/widgets/: __init__.py  export_widget.py  history_widget.py  manual_select_widget.py  offline_database_widget.py  select_source_widget.py  toggle_button_widget.py  variant_selector_widget.py  video_view.py
src/card_scanner_pkg/apps/gui_qt/workers/: __init__.py  detect_card_worker.py  fetch_arts_worker.py
src/card_scanner_pkg/config/: default.toml
src/card_scanner_pkg/core/api/: __init__.py  interfaces.py  types.py
src/card_scanner_pkg/core/io/: __init__.py  sinks.py  sources.py
src/card_scanner_pkg/core/pipeline/: __init__.py  base.py
src/card_scanner_pkg/core/pipeline/stages/: card_detector.py  card_format.py  optic_char_recog.py
src/card_scanner_pkg/core/utils/: __init__.py  imaging.py  network.py
tests/: api_tests.py
tools/: fetch_all_arts.py  fetch_expansion_ids.py
